Monthly Closing PRD FR-600
